2006-06-12 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Delete file pi1/locallang.php
	* Add Spanish labels in pi1/locallang.xml
	* Replace br tag by linefeed (instead of space) in plain text rendering plugin.

2006-05-16 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update version number to 2.1.3
	* Fix issue 3444: missing value-check in tt_news plain-text rendering script.
	* Fix issue 3317: too short require_once statements in mod/class.mod_web_dmail.php
	* Fix issue 3489: setting tt_news to "strict" will cause an error in direct mail
	* Update to the structure of the manual.
	* Remove references to $HTTP_*_VARS in dmailerd.phpcron and returnmail.phpsh

2006-05-15  Thorsten Kahler <thorsten.kahler@dkd.de>
	* Fixed Bug in tx_directmail_ttnews_plaintext::extraCodesProcessor()

2006-04-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction: warning message when fetched content contains no direct mail boundaries issued too often.
	* Update to the manual.
	* Synchronize ext_emconf.php.

2006-04-19 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.1.2
  	* Fix issue 3298: Fatal error: Call to a member function on a non-object in statistics function
	* Fix issue 3301: tca.php has short php open tag.
	* Remove most field exclusions in tca.php.
	* Issue error messages when content cannot be fetched.
	* Issue warning message when fetched content contains no direct mail boundaries.
	* Include all content in messages when there are no boundaries in the content.

2006-04-14 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Version 2.1.1
	* Mime types may contain . and +
	* Correct sql error when sending mails to a plain recipient list.

2006-04-13 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Rewrite method getMimeType so that it uses the API form t3lib_div